--- a/css-demo/assets/css/style.css
+++ b/css-demo/assets/css/style.css
@@ -11,11 +11,19 @@ html {
   }
 
   /*  ---------------Utility Classes-----------------  */
+
 .container{
   width: 80vw;
   max-width: 960px;
   margin: 40px auto;
 }
+
+ /*  ---------------Responsive Images-----------------  */
+
+img{
+  max-width: 100%;
+}
+
   
 body {
 
@@ -59,6 +67,7 @@ header.primary h2{
 }
 
 nav.primary{}
+
 nav.primary ul{
   padding:0;
   display:flex;
@@ -98,6 +107,70 @@ nav.primary ul li a:hover{
   padding: 5px 0 5px 10px;
 }
 
+#blog{
+  display:flex;
+  flex-direction:row;
+  justify-content:center;
+  gap:30px;
+  border-top: 1px solid #cccccc;
+  padding-top: 40px;
+  
+}
+
+#blog article.post{
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.6);
+  padding:10px;
+  font-size:.8rem;
+  border-radius:4px;
+  transition:.4s;
+  background-color: #C7685B;
+}
+
+#blog article.post:hover {
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.4);
+}
+
+figure{
+  margin:0;
+}
+
+figcaption, time{
+  text-transform:uppercase;
+  font-size:.6rem;
+}
+
+#blog article.post a{
+  text-decoration:none;
+}
+
+aside[role="complementary"]{
+  background-color:#C7685B;
+  color: #ffffff;
+  padding:40px 0;
+}
+
+aside .container{
+  display:flex;
+  flex-direction: row;
+  gap:40px;
+}
+
+aside .container a{
+  color: white;
+  display:block;
+  text-align: right;
+}
+
+aside article footer{
+  display:none;
+}
+
+
+
+
+
+
+
 
 @media screen and (max-widthmax-width:500px){
   nav.primary ul{
@@ -107,6 +180,9 @@ nav.primary ul li a:hover{
   
   nav.primary ul li a{
     display:block;
+    flex-direction: row;
+    justify-content: center;
+    gap: 30px;
   }
 
 }
