--- a/mars-rover-p1/assets/css/style.css
+++ b/mars-rover-p1/assets/css/style.css
@@ -19,12 +19,13 @@ html {
 
 body {
     font-family: 'Roboto', sans-serif;
-    color: #ffffff;
+    /*color: #ffffff;*/
     background-color: #0b0c10;
     background-image: url(../img/background3.jpg); /* taken from https://unsplash.com/s/photos/space-wallpaper */
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
+    
     
   }
   
