--- a/mars-rover-Final/assets/css/style.css
+++ b/mars-rover-Final/assets/css/style.css
@@ -85,7 +85,7 @@ body {
   main {
     max-width: 960px;
     margin: 32px auto;
-    padding: 0 16px;
+    padding: 2px 16px; /* top & bottom: 2px, left & right: 16px */
     background-color: rgba(0, 0, 0, 0.7);
     border-radius: 10px;
   }
