--- a/mars-rover-Final/assets/css/style.css
+++ b/mars-rover-Final/assets/css/style.css
@@ -73,7 +73,7 @@ nav ul li a {
   display: inline-block;
   padding: 10px 20px;
   background-color: #d62f2f;
-  color: white;
+  color: #ffffff;;
   text-decoration: none;
   border-radius: 25px;
   opacity: 0.5;
