--- a/mars-rover-Final/assets/css/style.css
+++ b/mars-rover-Final/assets/css/style.css
@@ -42,6 +42,7 @@ header {
   background-repeat: no-repeat;              
   padding: 160px 32px 80px 32px; /* made header bigger */
   text-align: center;
+  border: 2px solid #000000;
 }
 
 header h1 {
